# WAX-P2EGame-WODH-wdhmain

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: deploy.yml
drhemsworlds/: CMakeLists.txt  drhemsworlds.cpp  drhemsworlds.hpp
drhemsworlds/include/: b64.h  const_factors.hpp  const_prizes.hpp  const_prizes_test.hpp  const_tool_groups.hpp  const_tool_groups_test.hpp  const_tool_syn.hpp  resources.hpp  vigenere.h
drhemsworlds/tables/: assets.hpp  avatars.hpp  collections.hpp  config.hpp  factors.hpp  items.hpp  lands.hpp  lfactors.hpp  ltools.hpp  penalty.hpp  planets.hpp  players.hpp  prizes.hpp  prodplugin1.hpp  recipes.hpp  schemas.hpp  seeds.hpp  spins.hpp  sync.hpp  templates.hpp  tools.hpp  water.hpp
